--- a/index.html
+++ b/index.html
@@ -16,6 +16,46 @@
 
 <body>
 
+    <div class="slider-container">
+        <div class="slider">
+            <div class="slide active">
+                <img src="https://www.sistecgn.ac.in/assets/admin/upload/slider//848376image.jpg" alt="Image 1">
+                <div class="slide-content">
+                    <h2>Slide 1</h2>
+                    <p>Text for slide 1</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="https://www.sistecgn.ac.in/assets/admin/upload/slider//183697image.jpg" alt="Image 2">
+                <div class="slide-content">
+                    <h2>Slide 2</h2>
+                    <p>Text for slide 2</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="https://www.sistecgn.ac.in/assets/admin/upload/slider//397691image.jpg" alt="Image 3">
+                <div class="slide-content">
+                    <h2>Slide 3</h2>
+                    <p>Text for slide 3</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+    <!--  -->
+
+
+
+
+
+
+
+
     <!-- -------------Navigation Bar----------- -->
     <div class="mainNav">
         <div class="mainHeader d-flex">
@@ -140,7 +180,9 @@
     </div>
 
 
-
+    <div class="blur-cont">
+        <div class="blur-effect"></div>
+    </div>
     <!-- --------------------News & Notices------------------ -->
     <div class="newsNoticeContainer">
         <div class="container">
@@ -285,7 +327,138 @@
         </div>
     </div>
 
+    <div class="blur-cont">
+        <div class="blur-effect"></div>
+    </div>
+    <div class="recentHappContainer">
+        <div class="container">
+            <div class="row">
+
+
+                <div class="col-md-12 ">
+                    <h1 class="newsNoticehead ">Recent Happenings
+                        <div class="headingUnderline absolute"></div>
+                    </h1>
+                </div>
+
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="olay-row d-flex justify-content-center">
+                        <div class="hexagon first-olay">
+                            <div class="hexagon-inner">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//baja-atv-workshop-img1.jpg"
+                                    alt="Your Image">
+                            </div>
+                            <div class="overlay">
+                                <p>BAJA All Terrain Vehicle Workshop</p>
+                            </div>
+                        </div>
+                        <div class="hexagon first-olay">
+                            <div class="hexagon-inner">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//deeksharambh-samaroh-orientation-2023-25-img1.jpg"
+                                    alt="">
+                            </div>
+                            <div class="overlay">
+                                <p>Deeksharambh Samaroh cum Orientation Program: 2023-25</p>
+                            </div>
+                        </div>
+                        <div class="hexagon first-olay">
+                            <div class="hexagon-inner">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//sac-2023-24-investiture-ceremony-img1.jpg"
+                                    alt="">
+                            </div>
+                            <div class="overlay">
+                                <p>Student Activity Council 2023-24 Investiture Ceremony</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="olay-row d-flex justify-content-center ">
+                        <div class="hexagon second-oly-left">
+                            <div class="hexagon-inner  ">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//shubhagam-2023-orientation-img1.jpg"
+                                    alt="">
+                            </div>
+                            <div class="overlay">
+                                <p>Shubhagam 2023 Orientation Program</p>
+                            </div>
+                        </div>
+                        <div class="hexagon">
+                            <div class="hexagon-inner">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//77-independence-day-celebration-img1.jpg"
+                                    alt="">
+                            </div>
+                            <div class="overlay">
+                                <p>Shubhagam 2023 Orientation Program</p>
+                            </div>
+                        </div>
+                        <div class="hexagon">
+                            <div class="hexagon-inner">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//six-days-workshop-on-green-building-img1.jpg"
+                                    alt="">
+                            </div>
+                            <div class="overlay">
+                                <p>Shubhagam 2023 Orientation Program</p>
+                            </div>
+                        </div>
+                        <div class="hexagon second-oly-right">
+                            <div class="hexagon-inner">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//isro-space-on-wheels-img1.jpg"
+                                    alt="">
+                            </div>
+                            <div class="overlay">
+                                <p>ISRO - Space on Wheels</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="olay-row d-flex justify-content-center">
+                        <div class="hexagon   third-olay">
+                            <div class="hexagon-inner">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//mechatronics-training-ssb-officers-img1.jpg"
+                                    alt="">
+                            </div>
+                            <div class="overlay">
+                                <p>Blood Donation Camp</p>
+                            </div>
+                        </div>
+                        <div class="hexagon  third-olay">
+                            <div class="hexagon-inner">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//research-collaboration-meet-2023-img1.jpg"
+                                    alt="">
+                            </div>
+                            <div class="overlay">
+                                <p>Research Collaboration Meet 2K23</p>
+                            </div>
+                        </div>
+                        <div class="hexagon  third-olay">
+                            <div class="hexagon-inner">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/events//blood-donation-camp-img1.jpg"
+                                    alt="">
+                            </div>
+                            <div class="overlay">
+                                <p>10 Days Mechatronics Training for SSB Officers
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- -----------------Engineering MBA @ SISTec ----------- -->
+
+    <div class="blur-cont">
+        <div class="blur-effect"></div>
+    </div>
+
+
+
     <div class="parentEng">
         <div class="container">
             <div class="row">
@@ -298,16 +471,21 @@
                         <p class="sistecDesc">The B.Tech. Engineering Program at Sagar Institute of Science and
                             Technology
                             (SISTec) Gandhi Nagar Campus is developed
-                            from an industrial point of view, with a great focus on modern technologies employed in the
+                            from an industrial point of view, with a great focus on modern technologies employed in
+                            the
                             industries. Engineers are
-                            the focal point in our economy to design, test, and develop the next generation of products
+                            the focal point in our economy to design, test, and develop the next generation of
+                            products
                             and
                             services for the
-                            betterment of society. In this regard, the pedagogy is designed based on industry-oriented
+                            betterment of society. In this regard, the pedagogy is designed based on
+                            industry-oriented
                             training modules a level
-                            extra than the standard university curriculum. Similarly, the MTech Engineering Program is
+                            extra than the standard university curriculum. Similarly, the MTech Engineering Program
+                            is
                             developed from a research
-                            point of view to inculcate the spirit of innovation and development in Science & Technology.
+                            point of view to inculcate the spirit of innovation and development in Science &
+                            Technology.
                         </p>
                     </div>
                     <div class="row space-mob-y-5">
@@ -357,9 +535,14 @@
 
                 </div>
                 <div class="col-md-4">
-                    <video src="https://www.sistecgn.ac.in/assets/web/videos/home/courses-engg.mp4"></video>
-                    <div class="sideVideo">
+                    <div class="video-cont-right">
+                        <div class="video-div">
+                            <div class="video-cover">
+                                <video src="https://www.sistecgn.ac.in/assets/web/videos/home/courses-engg.mp4"></video>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
 
@@ -386,7 +569,8 @@
                             audio-visual lectures, case
                             studies, paid/unpaid internships, learning through events & activities, and lab-based
                             learning. Students receive a
-                            foundational level of MBA education with a great focus on the key management disciplines,
+                            foundational level of MBA education with a great focus on the key management
+                            disciplines,
                             subjects, and issues.</p>
                     </div>
                     <div class="row space-mob-y-5">
@@ -431,8 +615,12 @@
 
                 </div>
                 <div class="col-md-4">
-                    <video src="https://www.sistecgn.ac.in/assets/web/videos/home/courses-engg.mp4"></video>
-                    <div class="sideVideo">
+                    <div class="video-cont-right">
+                        <div class="video-div">
+                            <div class="video-cover">
+                                <video src="https://www.sistecgn.ac.in/assets/web/videos/home/courses-engg.mp4"></video>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -442,13 +630,90 @@
 
     </div>
 
+    <div class="blur-effect"></div>
 
     <!-- ---------------SISTec PLACEMENTS------------- -->
+    <div class="placement-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="">
+                        <h1 class="aboutHeading">SISTec Placements
+                            <div class="headingUnderline absolute"></div>
+
+                        </h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="placementCardWrap">
+                        <div class="placementCard">
+                            <div class="placementImage">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/others/placements//568541image.jpg"
+                                    alt="" srcset="">
+                            </div>
+                            <div class="placementDetails">
+                                <p>Ashutosh Gupta</p>
+                                <p><span class="highlightP">SALESFORCE <br> ENGINEER TRAINEE</span></p>
+                                <p>Bajaj Healthcare</p>
+                                <p>Package <span class="highlightP">12</span> LPA</p>
+                                <p>Department CSE</p>
+                                <p>Hometown <span class="highlightP">MANDIDEEP, M.P</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="placementCardWrap">
+                        <div class="placementCard">
+                            <div class="placementImage">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/others/placements//568541image.jpg"
+                                    alt="" srcset="">
+                            </div>
+                            <div class="placementDetails">
+                                <p>Ashutosh Gupta</p>
+                                <p><span class="highlightP">SALESFORCE <br> ENGINEER TRAINEE</span></p>
+                                <p>Bajaj Healthcare</p>
+                                <p>Package <span class="highlightP">12</span> LPA</p>
+                                <p>Department CSE</p>
+                                <p>Hometown <span class="highlightP">MANDIDEEP, M.P</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="placementCardWrap">
+                        <div class="placementCard">
+                            <div class="placementImage">
+                                <img src="https://www.sistecgn.ac.in/assets/admin/upload/others/placements//568541image.jpg"
+                                    alt="" srcset="">
+                            </div>
+                            <div class="placementDetails">
+                                <p>Ashutosh Gupta</p>
+                                <p><span class="highlightP">SALESFORCE <br> ENGINEER TRAINEE</span></p>
+                                <p>Bajaj Healthcare</p>
+                                <p>Package <span class="highlightP">12</span> LPA</p>
+                                <p>Department CSE</p>
+                                <p>Hometown <span class="highlightP">MANDIDEEP, M.P</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="">
-                    <h1 class="aboutHeading">SISTec Placements
+                    <h1 class="aboutHeading">SISTec Recruiters
                         <div class="headingUnderline absolute"></div>
 
                     </h1>
@@ -456,21 +721,34 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4">
-                <div class="placementCardWrap">
-                    <div class="placementCard">
-                        <div class="placementImage">
-                            <img src="https://www.sistecgn.ac.in/assets/admin/upload/others/placements//568541image.jpg"
-                                alt="" srcset="">
-                        </div>
-                        <div class="placementDetails">
-                            <p>Ashutosh Gupta</p>
-                            <p><span class="highlightP">SALESFORCE <br> ENGINEER TRAINEE</span></p>
-                            <p>Bajaj Healthcare</p>
-                            <p>Package <span class="highlightP">12</span> LPA</p>
-                            <p>Department CSE</p>
-                            <p>Hometown <span class="highlightP">MANDIDEEP, M.P</span></p>
-                        </div>
+            <div class="col-md-12">
+                <div class="partners-container">
+                    <div class="partners-slider">
+                        <div class="partner"><img
+                                src="https://www.sistecgn.ac.in/assets/web/images/home/recruiters/C10.jpg"
+                                alt="Partner 1"></div>
+                        <div class="partner"><img
+                                src="https://www.sistecgn.ac.in/assets/web/images/home/recruiters/C11.jpg"
+                                alt="Partner 2"></div>
+                        <div class="partner"><img
+                                src="https://www.sistecgn.ac.in/assets/web/images/home/recruiters/C12.jpg"
+                                alt="Partner 3"></div>
+                        <div class="partner"><img
+                                src="https://www.sistecgn.ac.in/assets/web/images/home/recruiters/C13.jpg"
+                                alt="Partner 4"></div>
+                        <div class="partner"><img
+                                src="https://www.sistecgn.ac.in/assets/web/images/home/recruiters/C15.jpg"
+                                alt="Partner 4"></div>
+                        <div class="partner"><img
+                                src="https://www.sistecgn.ac.in/assets/web/images/home/recruiters/C14.jpg"
+                                alt="Partner 4"></div>
+                        <div class="partner"><img
+                                src="https://www.sistecgn.ac.in/assets/web/images/home/recruiters/C16.jpg"
+                                alt="Partner 4"></div>
+                        <div class="partner"><img
+                                src="https://www.sistecgn.ac.in/assets/web/images/home/recruiters/C1.jpg"
+                                alt="Partner 4"></div>
+
                     </div>
                 </div>
             </div>
@@ -478,9 +756,26 @@
     </div>
 
 
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h4 class="footer-heading">Contact Us</h4>
+                </div>
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
