--- a/index.html
+++ b/index.html
@@ -19,24 +19,37 @@
     <div class="slider-container">
         <div class="slider">
             <div class="slide active">
-                <img src="https://www.sistecgn.ac.in/assets/admin/upload/slider//848376image.jpg" alt="Image 1">
+                <img src="./images/1.webp" alt="Image 1">
                 <div class="slide-content">
                     <h2>Slide 1</h2>
                     <p>Text for slide 1</p>
                 </div>
             </div>
-            <div class="slide">
-                <img src="https://www.sistecgn.ac.in/assets/admin/upload/slider//183697image.jpg" alt="Image 2">
+        </div>
+        <div class="slider">
+            <div class="slide active">
+                <img src="./images/2.webp" alt="Image 1">
                 <div class="slide-content">
-                    <h2>Slide 2</h2>
-                    <p>Text for slide 2</p>
+                    <h2>Slide 1</h2>
+                    <p>Text for slide 1</p>
                 </div>
             </div>
-            <div class="slide">
-                <img src="https://www.sistecgn.ac.in/assets/admin/upload/slider//397691image.jpg" alt="Image 3">
+        </div>
+        <div class="slider">
+            <div class="slide active">
+                <img src="./images/3.webp" alt="Image 1">
                 <div class="slide-content">
-                    <h2>Slide 3</h2>
-                    <p>Text for slide 3</p>
+                    <h2>Slide 1</h2>
+                    <p>Text for slide 1</p>
+                </div>
+            </div>
+        </div>
+        <div class="slider">
+            <div class="slide active">
+                <img src="./images/4.webp" alt="Image 1">
+                <div class="slide-content">
+                    <h2>Slide 1</h2>
+                    <p>Text for slide 1</p>
                 </div>
             </div>
         </div>
@@ -762,8 +775,44 @@
             <div class="row">
                 <div class="col-md-4">
                     <h4 class="footer-heading">Contact Us</h4>
+                    <div class="ftr-show">
+                        <span class="material-symbols-outlined">
+                            location_on
+                        </span>
+                        <p>Sagar Institute of Science & Technology (SISTec), Opposite International Airport, Gandhi
+                            Nagar, Bhopal 462036 (M.P.)</p>
+                    </div>
+                    <div class="ftr-show">
+                        <span class="material-symbols-outlined">
+                            call
+                        </span>
+                        <p>Contact No. :
+                            +91 9977995985</p>
+                    </div>
+                    <div class="ftr-show">
+                        <span class="material-symbols-outlined">
+                            mail
+                        </span>
+                        <p>admissions@sistec.ac.in</p>
+                    </div>
+                    <div class="enterprises">
+                        <h4 class="footer-heading">
+                            Our Enterprises
+                        </h4>
+                        <ul>
+                            <li>Sagar Group</li>
+                            <li>Agrawal Builders</li>
+                            <li>Sagar Manufacturers</li>
+                            <li>Sagar Nutriments</li>
+                            <li>Sagar Multispeciality Hospital</li>
+                            <li>Sagar Public School</li>
+                            <li>Abhay Sagar Foundation</li>
+                            <li>Sagar Multispeciality Hospital</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-md-4">
+                    <h4 class="footer-heading">Our Campuses</h4>
 
                 </div>
                 <div class="col-md-4"></div>
