Added SGI Spread

--- a/index.html
+++ b/index.html
@@ -16,45 +16,19 @@
 
 <body>
 
-    <div class="slider-container">
+    <!-- <div class="slider-container">
         <div class="slider">
             <div class="slide active">
                 <img src="./images/1.webp" alt="Image 1">
-                <div class="slide-content">
-                    <h2>Slide 1</h2>
-                    <p>Text for slide 1</p>
-                </div>
+            </div>
+            <div class="slide">
+                <img src="./images/2.webp" alt="Image 2">
+            </div>
+            <div class="slide">
+                <img src="image3.jpg" alt="Image 3">
             </div>
         </div>
-        <div class="slider">
-            <div class="slide active">
-                <img src="./images/2.webp" alt="Image 1">
-                <div class="slide-content">
-                    <h2>Slide 1</h2>
-                    <p>Text for slide 1</p>
-                </div>
-            </div>
-        </div>
-        <div class="slider">
-            <div class="slide active">
-                <img src="./images/3.webp" alt="Image 1">
-                <div class="slide-content">
-                    <h2>Slide 1</h2>
-                    <p>Text for slide 1</p>
-                </div>
-            </div>
-        </div>
-        <div class="slider">
-            <div class="slide active">
-                <img src="./images/4.webp" alt="Image 1">
-                <div class="slide-content">
-                    <h2>Slide 1</h2>
-                    <p>Text for slide 1</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    </div> -->
 
 
 
@@ -343,6 +317,9 @@
     <div class="blur-cont">
         <div class="blur-effect"></div>
     </div>
+
+
+    <!-- Recent happenings -->
     <div class="recentHappContainer">
         <div class="container">
             <div class="row">
@@ -464,6 +441,79 @@
         </div>
     </div>
 
+    <div class="counter-wrap">
+        <div class="conatiner">
+            <div class="row">
+                <div class="col-md-12">
+                    <div>
+                        <h1 class="aboutHeading">THE SGI spread
+                            <div class="headingUnderline absolute"></div>
+
+                        </h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="counter-ctn">
+                        <div class="coutner-icon ">
+                            <img src="https://www.sistecgn.ac.in/assets/web/images/home/counter/years-in-education.png"
+                                alt="">
+                        </div>
+
+                        <div class="counter-det">
+                            <h4 class="counter-value" id="counter-value1">25 +</h4>
+                            <h5 class="counter-p">Years in Education</h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="counter-ctn">
+                        <div class="coutner-icon ">
+                            <img src="https://www.sistecgn.ac.in/assets/web/images/home/counter/skilled-faculties.png"
+                                alt="">
+                        </div>
+
+                        <div class="counter-det">
+                            <h4 class="counter-value" id="counter-value2">2000 +</h4>
+                            <h5 class="counter-p">HIGHLY SKILLED FACULTIES</h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="counter-ctn">
+                        <div class="coutner-icon ">
+                            <img src="https://www.sistecgn.ac.in/assets/web/images/home/counter/network.png" alt="">
+                        </div>
+
+                        <div class="counter-det">
+                            <h4 class="counter-value" id="counter-value3">20000 +</h4>
+                            <h5 class="counter-p">STUDENTS NETWORK
+                            </h5>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="counter-ctn">
+                        <div class="coutner-icon ">
+                            <img src="https://www.sistecgn.ac.in/assets/web/images/home/counter/jobs.png" alt="">
+                        </div>
+
+                        <div class="counter-det">
+                            <div class="counter-value" id="counter-value4">1150+</div>
+                            <h5 class="counter-p">JOB OFFERS TO 2023 BATCH</h5>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- -----------------Engineering MBA @ SISTec ----------- -->
 
     <div class="blur-cont">
@@ -551,7 +601,8 @@
                     <div class="video-cont-right">
                         <div class="video-div">
                             <div class="video-cover">
-                                <video src="https://www.sistecgn.ac.in/assets/web/videos/home/courses-engg.mp4"></video>
+                                <video src="https://www.sistecgn.ac.in/assets/web/videos/home/courses-engg.mp4" autoplay
+                                    loop muted></video>
                             </div>
                         </div>
                     </div>
@@ -631,7 +682,8 @@
                     <div class="video-cont-right">
                         <div class="video-div">
                             <div class="video-cover">
-                                <video src="https://www.sistecgn.ac.in/assets/web/videos/home/courses-engg.mp4"></video>
+                                <video src="https://www.sistecgn.ac.in/assets/web/videos/home/courses-mba.mp4" autoplay
+                                    loop muted></video>
                             </div>
                         </div>
                     </div>
@@ -722,6 +774,8 @@
         </div>
     </div>
 
+
+    <!-- SIStec Recruiters -->
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -773,7 +827,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h4 class="footer-heading">Contact Us</h4>
                     <div class="ftr-show">
                         <span class="material-symbols-outlined">
@@ -795,7 +849,7 @@
                         </span>
                         <p>admissions@sistec.ac.in</p>
                     </div>
-                    <div class="enterprises">
+                    <div class="ftr-list">
                         <h4 class="footer-heading">
                             Our Enterprises
                         </h4>
@@ -811,15 +865,78 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <h4 class="footer-heading">Our Campuses</h4>
+                <div class="col-md-3">
+                    <div class="ftr-list">
+                        <h4 class="footer-heading">Our Campuses</h4>
+                        <ul>
+                            <li>SISTec-R</li>
+                            <li>SISTec-E</li>
+                            <li>SISTec-MBA</li>
+                            <li>SIPTec</li>
+                        </ul>
+                    </div>
+                    <div class="ftr-list">
+                        <h4 class="footer-heading">
+                            Cells
+                        </h4>
+                        <ul>
+                            <li>IQAC</li>
+                            <li>IC Committee</li>
+                            <li>SC/ST Cell</li>
+                            <li>OBC Cell</li>
+                            <li>Student Welfare</li>
+                            <li>Anti Ragging</li>
+                        </ul>
+                    </div>
 
                 </div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
+                <div class="col-md-3">
+                    <div class="ftr-list">
+                        <h4 class="footer-heading">Important Links</h4>
+                        <ul>
+                            <li>SISTec Bulletins</li>
+                            <li>MoUs</li>
+                            <li>FAQs</li>
+                            <li>CSR</li>
+                            <li>Media Coverage</li>
+                            <li>T&P Portal</li>
+                            <li>Feedback Forms</li>
+                            <li>Student Feedback form</li>
+                            <li>ERP Login</li>
+                            <li>NIRF</li>
+                            <li>Student Scholorships</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ftr-list">
+                        <h4 class="footer-heading">Useful Links</h4>
+                        <ul>
+                            <li>MoE</li>
+                            <li>AICTE</li>
+                            <li>RGPV</li>
+                            <li>BU Bhopal</li>
+                            <li>NIRF</li>
+                            <li>NAAC</li>
+                            <li>MP Scholorship</li>
+                            <li>Anti-Ragging (UGC)</li>
+                            <li>MP DTE</li>
+                            <li>Digi Locker</li>
+                            <li>National Digital Library</li>
+                            <li>NPTEl</li>
+                            <li>SWAYAM</li>
+                            <li>Virtual Labs</li>
+                            <li>ARIIA Report 2020-21</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
+
+    <div class="side-admission">
+        <p>Admissions-2023</p>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
