--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="aboutHeading">ABOUT SISTec
+                    <h1 class="aboutHeading">ABOUT Sagar
                         <div class="headingUnderline absolute"></div>
 
                     </h1>
